--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ tgcrypto
 pymongo[srv]==3.12.3
 motor==3.7.0
 marshmallow==3.14.1
-umongo==3.0.1
+umongo
 requests
 bs4
 git+https://github.com/Joelkb/cinemagoer
