--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-pyrogram==2.0.77
-pyrofork==2.3.45
+pyrogram
+pyrofork
 tgcrypto
-pymongo[srv]==3.12.3
-motor==3.7.0
-marshmallow==3.14.1
+pymongo[srv]==
+motor
+marshmallow
 umongo
 requests
 bs4
